# sems-app

./: .vercel.env  ADMIN_SETUP.md  ADMIN_USER_MANAGEMENT.md  ANALYTICS_DEVELOPMENT_CHECKLIST.md  ANALYTICS_IMPLEMENTATION_COMPLETE.md  ANALYTICS_QUICK_START.md  API_DOCS.md  API_TEMPLATE.md  ARCHITECTURE_FIX_SUMMARY.md  ARCHITECTURE_IMPLEMENTATION_STATUS.md  ARCHITECTURE_VISUAL_GUIDE.md  DATABASE_SETUP.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_DOCUMENTATION_INDEX.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SOLUTION.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_ADMIN.md  DPAP_ARCHITECTURE_VISUAL.md  DPAP_DEVELOPER_QUICKSTART.md  DPAP_DEVELOPMENT_PHASES.md  DPAP_INTEGRATION_ANALYSIS.md  DPAP_MIGRATION_GUIDE.md  DPAP_PHASE1_CHECKLIST.md  DPAP_PHASE1_IMPLEMENTATION_SUMMARY.md  DPAP_PHASE1_OPTIONS_2_3_4_COMPLETE.md  DPAP_QUICK_REFERENCE.md  Dockerfile  ELECTRON_IMPLEMENTATION_COMPLETE.md  ELECTRON_SQLITE_ARCHITECTURE.md  ENCRYPTION_QUICK_REFERENCE.md  ENCRYPTION_READY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIXES_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_CHECKLIST_ADMIN.md  IMPLEMENTATION_GUIDE.md  INSTALL_GUIDE.md  (+76 more)
.husky/: pre-commit
__tests__/: api.sync.pull-smtp.route.test.ts  dose.test.ts  search.test.ts
e2e/: playwright.config.ts
prisma/: analytics-query.ts  backfill-dispensing-events.ts  check-api-responses.ts  check-dispense.ts  check-high-risk.ts  check-peak-hours.ts  create-sample-pharmacy.ts  create-test-dispense.ts  (+8 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: installer-fragment.wxs  main.rs
(+272 files in other folders)
